@@ -25,7 +25,9 @@ version 1.0.
 1.1.3
 -----
 
-- Fix internal accounting issues with the self BTL.
+- Fix a race condition with stdout/stderr not appearing properly from
+  all processes upon termination of an MPI job.
+- Fix internal accounting errors with the self BTL.
 - Fix typos in the code path for when sizeof(int) != sizeof(INTEGER)
   in the MPI F77 bindings functions.  Thanks to Pierre-Matthieu
   Anglade for bringing this problem to our attention.
